--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
-  "name": "parcel-project-template",
-  "version": "2.0.0",
-  "description": "",
-  "homepage": "https://github.com/alla1969321/RE2/
-"  "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-https://github.com/alla1969321/RE2/",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https:/https://github.com/alla1969321/RE2
-  "keywords": [],
-  "author": "0qsenxx, m1xture, illyabezpaliy13",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
-  },
-  "dependencies": {
-    "gh-pages": "^6.0.0",
-    "modern-normalize": "^1.1.0",
-    "netlify-cli": "^15.9.1"
+  "name": "vanilla-app-template",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build --base=/vanilla-app-template/",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
-    "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "vite": "^4.5.2",
+    "glob": "^8.1.0"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "license": "ISC",
+  "dependencies": {
+    "vite-plugin-full-reload": "^1.0.5",
+    "vite-plugin-html-inject": "^1.0.1"
+  }
 }
